package com.carservice.CarService.worker;

public enum WorkerRole {
    CONTRACTOR,
    MANAGER,
    RECEPTIONIST,
    WAREHOUSEMAN
}
